--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>个人网站</title>
+	<link rel="stylesheet" href="css/global.css" type="text/css">
 </head>
 <body>
 	<h3>王维军的个人网站</h3>
+	
 </body>
 </html>
