--- a/index.html
+++ b/index.html
@@ -6,79 +6,51 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>个人网站</title>
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/global.css" type="text/css">
 	<!--[if lt IE 9]>
 	<script src="./js/html5shiv.js"></script>
 	<script src="./js/respond.js"></script>
 	<![endif]-->
+	<style>
+		#navbar{
+			background: #6E5499;
+		}
+		a{
+			color: #fff !important;
+		}
+	</style>
 </head>
 <body>
-	<div class="container">
-		<div class="col-xs-6 col-xs-offset-3">
-			<h3 class="text-center text-primary">王维军的bootstrap表单</h3>
-			<form action="#" class="form-horizontal text-info">
-				<div class="form-group">
-					<label class="control-label col-xs-4">用户名：</label>
-					<div class="col-xs-8">
-						<input type="text" class="form-control" name="username" placeholder="请输入用户名，如:王维军" required>
-					</div>
+	<nav class="navbar col-xs-12 navbar-inverse" id="navbar">
+		<div class="container">
+			<div class="navbar-header">
+				<a class="navbar-brand">VergilWang</a>
+				<button class="navbar-toggle" data-toggle="collapse" data-target="#my-con">
+					<i class="icon-bar"></i>
+					<i class="icon-bar"></i>
+					<i class="icon-bar"></i>
+				</button>
+			</div>
+			<div id="my-con" class="navbar-collapse collapse">
+				<ul class="nav navbar-nav navbar-left">
+					<li class="active"><a href="">HTML</a></li>
+					<li><a href="">css</a></li>
+					<li><a href="">javascript</a></li>
+					<li><a href="">jQuery</a></li>
+					<li><a href="">html5</a></li>
+					<li><a href="">css3</a></li>
+					<li><a href="">angular</a></li>
+					<li><a href="">bootstrap</a></li>
+					<li><a href="">PHP</a></li>
+					<li><a href="">mysql</a></li>
+				</ul>
+				<div class="nav navbar-nav navbar-right">
+					<li><a href="">登录</a></li>
+					<li><a href="">注册</a></li>
 				</div>
-				<div class="form-group">
-					<label class="control-label col-xs-4">密码：</label>
-					<div class="col-xs-8">
-						<input type="password" name="pwd" placeholder="请输入密码" class="form-control">
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label col-xs-4">邮箱：</label>
-					<div class="col-xs-8">
-						<input type="email" name="email" placeholder="email" class="form-control">
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label col-xs-4">爱好：</label>
-					<div class="col-xs-8">
-						<div class="checkbox-inline">
-							<input type="checkbox">游戏
-						</div>
-						<div class="checkbox-inline">
-							<input type="checkbox">电影
-						</div>
-						<div class="checkbox-inline">
-							<input type="checkbox">音乐
-						</div>
-						<div class="checkbox-inline">
-							<input type="checkbox">睡觉
-						</div>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label col-xs-4">性别：</label>
-					<div class="col-xs-8">
-						<div class="radio-inline">
-							<input type="radio">男
-						</div>
-						<div class="radio-inline">
-							<input type="radio">女
-						</div>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label col-xs-4">爱好：</label>
-					<div class="col-xs-8">
-						<select class="form-control" style="color: #1b6d85;">
-							<option value="1">red</option>
-							<option value="1">green</option>
-							<option value="1">yellow</option>
-						</select>
-					</div>
-				</div>
-				<div class="form-group text-center">
-					<input type="submit" class="btn btn-success">
-					<input type="reset" class="btn btn-danger">
-				</div>
-			</form>
+			</div>
 		</div>
-	</div>
+	</nav>
 </body>
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
