--- a/index.html
+++ b/index.html
@@ -6,51 +6,374 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>个人网站</title>
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/global.css" type="text/css">
 	<!--[if lt IE 9]>
 	<script src="./js/html5shiv.js"></script>
 	<script src="./js/respond.js"></script>
 	<![endif]-->
-	<style>
-		#navbar{
-			background: #6E5499;
-		}
-		a{
-			color: #fff !important;
-		}
-	</style>
 </head>
 <body>
-	<nav class="navbar col-xs-12 navbar-inverse" id="navbar">
+	<!--头部导航-->
+	<nav class="navbar	 my-top-navbar navbar-fixed-top">
 		<div class="container">
-			<div class="navbar-header">
-				<a class="navbar-brand">VergilWang</a>
-				<button class="navbar-toggle" data-toggle="collapse" data-target="#my-con">
-					<i class="icon-bar"></i>
-					<i class="icon-bar"></i>
-					<i class="icon-bar"></i>
-				</button>
-			</div>
-			<div id="my-con" class="navbar-collapse collapse">
-				<ul class="nav navbar-nav navbar-left">
-					<li class="active"><a href="">HTML</a></li>
-					<li><a href="">css</a></li>
-					<li><a href="">javascript</a></li>
-					<li><a href="">jQuery</a></li>
-					<li><a href="">html5</a></li>
-					<li><a href="">css3</a></li>
-					<li><a href="">angular</a></li>
-					<li><a href="">bootstrap</a></li>
-					<li><a href="">PHP</a></li>
-					<li><a href="">mysql</a></li>
-				</ul>
-				<div class="nav navbar-nav navbar-right">
-					<li><a href="">登录</a></li>
-					<li><a href="">注册</a></li>
+			<div class="row">
+				<div class="navbar-header ">
+					<a href="index.html" class="navbar-brand">王维军的博客</a>
+					<button class="navbar-toggle" data-toggle="collapse" data-target="#my-con">
+						<i class="icon-bar"></i>
+						<i class="icon-bar"></i>
+						<i class="icon-bar"></i>
+					</button>
+				</div>
+				<div id="my-con" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li class="my-active"><a href="">html+css</a></li>
+						<li><a href="">html5+css3</a></li>
+						<li><a href="">js实例</a></li>
+						<li><a href="">jQuery特效</a></li>
+						<li><a href="">angularJS</a></li>
+						<li><a href="">bootstrap</a></li>
+						<li><a href="">PHP+mysql</a></li>
+					</ul>
 				</div>
 			</div>
 		</div>
 	</nav>
+	<!--内容1开始-->
+	<div class="container">
+		<div class="row">
+			<!--左边-->
+			<div class="col-sm-8 my-main-left">
+				<div class="row">
+					<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+						<!-- 轮播切换的小按钮 -->
+						<ol class="carousel-indicators">
+							<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+							<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+							<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+							<li data-target="#carousel-example-generic" data-slide-to="3"></li>
+						</ol>
+
+						<!-- 轮播的图片 -->
+						<div class="carousel-inner my-carousel-parent" role="listbox">
+							<div class="item active">
+								<img src="img/01.jpg" class="img-thumbnail" alt="...">
+								<div class="carousel-caption my-carousel-trans">
+									<div class="col-xs-8 col-xs-offset-2">
+										渡人如渡己，渡已，亦是渡
+									</div>
+								</div>
+							</div>
+							<div class="item">
+								<img src="img/02.jpg" class="img-thumbnail" alt="">
+								<div class="carousel-caption my-carousel-trans">
+									<div class="col-xs-8 col-xs-offset-2">
+										当我们被误解时，会花很多时间去辩白。 但没有用，没人愿意听，
+										大家习惯按自己的所闻、理解做出判别，每个人其实都很固执。
+									</div>
+
+								</div>
+							</div>
+							<div class="item">
+								<img src="img/03.jpg" class="img-thumbnail" alt="">
+								<div class="carousel-caption my-carousel-trans">
+									<div class="col-xs-8 col-xs-offset-2">
+										与其努力且痛苦的试图扭转别人的评判，不如默默承受，
+										给大家多一点时间和空间去了解。
+									</div>
+								</div>
+							</div>
+							<div class="item">
+								<img src="img/04.jpg" class="img-thumbnail" alt="">
+								<div class="carousel-caption my-carousel-trans">
+									<div class="col-xs-8 col-xs-offset-2">
+										而我们省下辩解的功夫，去实现自身更久远的人生价值。
+										其实，渡人如渡己，渡已，亦是渡人。
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<!-- 控制切换图片 -->
+						<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+							<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+							<span class="sr-only">Previous</span>
+						</a>
+						<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+							<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+						</a>
+					</div>
+				</div>
+
+			</div>
+
+			<!--右边-->
+			<div class="col-sm-3 col-sm-offset-1 hidden-xs my-main-right">
+				<div class="row">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<div class="panel-title">个人简介</div>
+						</div>
+						<div class="panel-body">
+							<ul class="my-panel-ul">
+								<li>姓 名：王维军</li>
+								<li>性 别：男</li>
+								<li>电 话：15721252192</li>
+								<li>email：1745159983@qq.com</li>
+							</ul>
+						</div>
+						<div class="panel-footer my-panel-icon">
+							<span class="col-xs-offset-1 fa fa-qq fa-2x"></span>
+							<span class="col-xs-offset-1 fa fa-comment fa-2x"></span>
+							<span class="col-xs-offset-1 fa fa-home fa-2x"></span>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!--内容2开始-->
+			<!--左边-->
+			<div class="col-sm-8 my-con-left">
+				<div class="row">
+					<div class="col-xs-11">
+						<div class="row">
+							<div class="panel panel-default">
+								<div class="panel-heading">
+									<div class="panel-title">第一块面板</div>
+								</div>
+								<div class="panei-body my-con-panel1">
+									<div class="col-xs-3"></div>
+									<div class="col-xs-9">
+										通过 .panel-heading 可以很简单地为面板加入一个标题容器。
+										你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
+										不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
+									</div>
+								</div>
+								<div class="panel-footer clearfix">
+									<div class="pull-left">
+										<span class="fa fa-clock-o"></span>
+										2017-05-13
+									</div>
+									<div class="pull-right">
+										<span class="fa fa-thumbs-up"></span>
+										点赞
+										<span class="fa fa-thumbs-down"></span>
+										踩
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-push-11 my-circle-caret">
+						<div class="my-caret"></div>
+						<div class="my-circle"></div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-11">
+						<div class="row">
+							<div class="panel panel-default">
+								<div class="panel-heading">
+									<div class="panel-title">第一块面板</div>
+								</div>
+								<div class="panei-body my-con-panel1">
+									<div class="col-xs-3"></div>
+									<div class="col-xs-9">
+										通过 .panel-heading 可以很简单地为面板加入一个标题容器。
+										你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
+										不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
+									</div>
+								</div>
+								<div class="panel-footer clearfix">
+									<div class="pull-left">
+										<span class="fa fa-clock-o"></span>
+										2017-05-13
+									</div>
+									<div class="pull-right">
+										<span class="fa fa-thumbs-up"></span>
+										点赞
+										<span class="fa fa-thumbs-down"></span>
+										踩
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-push-11 my-circle-caret">
+						<div class="my-caret"></div>
+						<div class="my-circle"></div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-11">
+						<div class="row">
+							<div class="panel panel-default">
+								<div class="panel-heading">
+									<div class="panel-title">第一块面板</div>
+								</div>
+								<div class="panei-body my-con-panel1">
+									<div class="col-xs-3"></div>
+									<div class="col-xs-9">
+										通过 .panel-heading 可以很简单地为面板加入一个标题容器。
+										你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
+										不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
+									</div>
+								</div>
+								<div class="panel-footer clearfix">
+									<div class="pull-left">
+										<span class="fa fa-clock-o"></span>
+										2017-05-13
+									</div>
+									<div class="pull-right">
+										<span class="fa fa-thumbs-up"></span>
+										点赞
+										<span class="fa fa-thumbs-down"></span>
+										踩
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-push-11 my-circle-caret">
+						<div class="my-caret"></div>
+						<div class="my-circle"></div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-11">
+						<div class="row">
+							<div class="panel panel-default">
+								<div class="panel-heading">
+									<div class="panel-title">第一块面板</div>
+								</div>
+								<div class="panei-body my-con-panel1">
+									<div class="col-xs-3"></div>
+									<div class="col-xs-9">
+										通过 .panel-heading 可以很简单地为面板加入一个标题容器。
+										你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
+										不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
+									</div>
+								</div>
+								<div class="panel-footer clearfix">
+									<div class="pull-left">
+										<span class="fa fa-clock-o"></span>
+										2017-05-13
+									</div>
+									<div class="pull-right">
+										<span class="fa fa-thumbs-up"></span>
+										点赞
+										<span class="fa fa-thumbs-down"></span>
+										踩
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-push-11 my-circle-caret">
+						<div class="my-caret"></div>
+						<div class="my-circle"></div>
+					</div>
+				</div>
+			</div>
+			<!--右边-->
+			<div class="my-con-right col-sm-3 col-sm-offset-1 hidden-xs">
+				<div class="row">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<div class="panel-title">
+								今日热门
+							</div>
+						</div>
+						<div class="panel-body">
+							<ol>
+								<li><a href="">白岩松：我经历的三次磨难</a></li>
+								<li><a href="">波尔图：如你所有的浪漫</a></li>
+								<li><a href="">周五早间市场信息</a></li>
+								<li><a href="">我国人民如此沉迷喝热水</a></li>
+								<li><a href="">游资反复抢两类股的反弹</a></li>
+								<li><a href="">古代打仗时真的是武将先单挑吗</a></li>
+							</ol>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<div class="panel-title">
+								图文并茂
+							</div>
+						</div>
+						<div class="panel-body">
+							<ul>
+								<li class="clearfix">
+									<a href="" class="col-xs-4">
+										<div class="row">
+											<img src="img/k01.jpg" alt="">
+										</div>
+									</a>
+									<a href="" class="col-xs-8">
+										<div class="row">
+											CSS 我们可以大大提升网页开发的工作效率！
+										</div>
+									</a>
+								</li>
+								<li class="clearfix">
+									<a href="" class="col-xs-4">
+										<div class="row">
+											<img src="img/k02.jpg" alt="">
+										</div>
+									</a>
+									<a href="" class="col-xs-8">
+										<div class="row">
+											JavaScript 是 Web 的编程语言
+										</div>
+									</a>
+								</li>
+								<li class="clearfix">
+									<a href="" class="col-xs-4">
+										<div class="row">
+											<img src="img/k02.jpg" alt="">
+										</div>
+									</a>
+									<a href="" class="col-xs-8">
+										<div class="row">
+											JavaScript 是 Web 的编程语言
+										</div>
+									</a>
+								</li>
+								<li class="clearfix">
+									<a href="" class="col-xs-4">
+										<div class="row">
+											<img src="img/k02.jpg" alt="">
+										</div>
+									</a>
+									<a href="" class="col-xs-8">
+										<div class="row">
+											Bootstrap 是基于 HTML、CSS、JAVASCRIPT 的
+										</div>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--分页-->
+			<ul class="pagination pull-right">
+				<li><a href="">首页</a></li>
+				<li><a href=""><<</a></li>
+				<li class="active"><a href="">1</a></li>
+				<li><a href="">2</a></li>
+				<li><a href="">3</a></li>
+				<li><a href="">4</a></li>
+				<li><a href="">5</a></li>
+				<li><a href="">6</a></li>
+				<li><a href="">7</a></li>
+				<li><a href="">>></a></li>
+				<li><a href="">尾页</a></li>
+			</ul>
+		</div>
+	</div>
 </body>
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
