--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<!--头部导航-->
-	<nav class="navbar	 my-top-navbar navbar-fixed-top">
+	<nav class="navbar navbar-inverse my-top-navbar navbar-fixed-top">
 		<div class="container">
 			<div class="row">
 				<div class="navbar-header ">
@@ -44,7 +44,7 @@
 	<div class="container">
 		<div class="row">
 			<!--左边-->
-			<div class="col-sm-8 my-main-left">
+			<div class="col-sm-8 col-xs-12 my-main-left">
 				<div class="row">
 					<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 						<!-- 轮播切换的小按钮 -->
@@ -133,151 +133,151 @@
 				</div>
 			</div>
 
-			<!--内容2开始-->
-			<!--左边-->
-			<div class="col-sm-8 my-con-left">
+			<!--&lt;!&ndash;内容2开始&ndash;&gt;-->
+			<!--&lt;!&ndash;左边&ndash;&gt;-->
+	<div class="col-sm-8 my-con-left">
+		<div class="row clearfix">
+			<div class="col-xs-11">
 				<div class="row">
-					<div class="col-xs-11">
-						<div class="row">
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									<div class="panel-title">第一块面板</div>
-								</div>
-								<div class="panei-body my-con-panel1">
-									<div class="col-xs-3"></div>
-									<div class="col-xs-9">
-										通过 .panel-heading 可以很简单地为面板加入一个标题容器。
-										你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
-										不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
-									</div>
-								</div>
-								<div class="panel-footer clearfix">
-									<div class="pull-left">
-										<span class="fa fa-clock-o"></span>
-										2017-05-13
-									</div>
-									<div class="pull-right">
-										<span class="fa fa-thumbs-up"></span>
-										点赞
-										<span class="fa fa-thumbs-down"></span>
-										踩
-									</div>
-								</div>
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<div class="panel-title">第一块面板</div>
+						</div>
+						<div class="panei-body my-con-panel1">
+							<div class="col-xs-3"></div>
+							<div class="col-xs-9">
+								通过 .panel-heading 可以很简单地为面板加入一个标题容器。
+								你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
+								不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
 							</div>
 						</div>
-					</div>
-					<div class="col-xs-push-11 my-circle-caret">
-						<div class="my-caret"></div>
-						<div class="my-circle"></div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-xs-11">
-						<div class="row">
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									<div class="panel-title">第一块面板</div>
-								</div>
-								<div class="panei-body my-con-panel1">
-									<div class="col-xs-3"></div>
-									<div class="col-xs-9">
-										通过 .panel-heading 可以很简单地为面板加入一个标题容器。
-										你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
-										不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
-									</div>
-								</div>
-								<div class="panel-footer clearfix">
-									<div class="pull-left">
-										<span class="fa fa-clock-o"></span>
-										2017-05-13
-									</div>
-									<div class="pull-right">
-										<span class="fa fa-thumbs-up"></span>
-										点赞
-										<span class="fa fa-thumbs-down"></span>
-										踩
-									</div>
-								</div>
+						<div class="panel-footer clearfix">
+							<div class="pull-left">
+								<span class="fa fa-clock-o"></span>
+								2017-05-13
+							</div>
+							<div class="pull-right">
+								<span class="fa fa-thumbs-up"></span>
+								点赞
+								<span class="fa fa-thumbs-down"></span>
+								踩
 							</div>
 						</div>
-					</div>
-					<div class="col-xs-push-11 my-circle-caret">
-						<div class="my-caret"></div>
-						<div class="my-circle"></div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-xs-11">
-						<div class="row">
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									<div class="panel-title">第一块面板</div>
-								</div>
-								<div class="panei-body my-con-panel1">
-									<div class="col-xs-3"></div>
-									<div class="col-xs-9">
-										通过 .panel-heading 可以很简单地为面板加入一个标题容器。
-										你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
-										不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
-									</div>
-								</div>
-								<div class="panel-footer clearfix">
-									<div class="pull-left">
-										<span class="fa fa-clock-o"></span>
-										2017-05-13
-									</div>
-									<div class="pull-right">
-										<span class="fa fa-thumbs-up"></span>
-										点赞
-										<span class="fa fa-thumbs-down"></span>
-										踩
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-push-11 my-circle-caret">
-						<div class="my-caret"></div>
-						<div class="my-circle"></div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-xs-11">
-						<div class="row">
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									<div class="panel-title">第一块面板</div>
-								</div>
-								<div class="panei-body my-con-panel1">
-									<div class="col-xs-3"></div>
-									<div class="col-xs-9">
-										通过 .panel-heading 可以很简单地为面板加入一个标题容器。
-										你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
-										不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
-									</div>
-								</div>
-								<div class="panel-footer clearfix">
-									<div class="pull-left">
-										<span class="fa fa-clock-o"></span>
-										2017-05-13
-									</div>
-									<div class="pull-right">
-										<span class="fa fa-thumbs-up"></span>
-										点赞
-										<span class="fa fa-thumbs-down"></span>
-										踩
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-push-11 my-circle-caret">
-						<div class="my-caret"></div>
-						<div class="my-circle"></div>
 					</div>
 				</div>
 			</div>
-			<!--右边-->
+			<div class="pull-right my-circle-caret">
+				<div class="my-caret"></div>
+				<div class="my-circle hidden-xs"></div>
+			</div>
+		</div>
+		<div class="row clearfix">
+			<div class="col-xs-11">
+				<div class="row">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<div class="panel-title">第一块面板</div>
+						</div>
+						<div class="panei-body my-con-panel1">
+							<div class="col-xs-3"></div>
+							<div class="col-xs-9">
+								通过 .panel-heading 可以很简单地为面板加入一个标题容器。
+								你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
+								不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
+							</div>
+						</div>
+						<div class="panel-footer clearfix">
+							<div class="pull-left">
+								<span class="fa fa-clock-o"></span>
+								2017-05-13
+							</div>
+							<div class="pull-right">
+								<span class="fa fa-thumbs-up"></span>
+								点赞
+								<span class="fa fa-thumbs-down"></span>
+								踩
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="pull-right my-circle-caret">
+				<div class="my-caret"></div>
+				<div class="my-circle hidden-xs"></div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-11">
+				<div class="row clearfix">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<div class="panel-title">第一块面板</div>
+						</div>
+						<div class="panei-body my-con-panel1">
+							<div class="col-xs-3"></div>
+							<div class="col-xs-9">
+								通过 .panel-heading 可以很简单地为面板加入一个标题容器。
+								你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
+								不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
+							</div>
+						</div>
+						<div class="panel-footer clearfix">
+							<div class="pull-left">
+								<span class="fa fa-clock-o"></span>
+								2017-05-13
+							</div>
+							<div class="pull-right">
+								<span class="fa fa-thumbs-up"></span>
+								点赞
+								<span class="fa fa-thumbs-down"></span>
+								踩
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="pull-right my-circle-caret">
+				<div class="my-caret"></div>
+				<div class="my-circle hidden-xs"></div>
+			</div>
+		</div>
+		<div class="row clearfix">
+			<div class="col-xs-11">
+				<div class="row">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<div class="panel-title">第一块面板</div>
+						</div>
+						<div class="panei-body my-con-panel1">
+							<div class="col-xs-3"></div>
+							<div class="col-xs-9">
+								通过 .panel-heading 可以很简单地为面板加入一个标题容器。
+								你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
+								不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
+							</div>
+						</div>
+						<div class="panel-footer clearfix">
+							<div class="pull-left">
+								<span class="fa fa-clock-o"></span>
+								2017-05-13
+							</div>
+							<div class="pull-right">
+								<span class="fa fa-thumbs-up"></span>
+								点赞
+								<span class="fa fa-thumbs-down"></span>
+								踩
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="pull-right my-circle-caret">
+				<div class="my-caret"></div>
+				<div class="my-circle hidden-xs"></div>
+			</div>
+		</div>
+	</div>
+			<!--&lt;!&ndash;右边&ndash;&gt;-->
 			<div class="my-con-right col-sm-3 col-sm-offset-1 hidden-xs">
 				<div class="row">
 					<div class="panel panel-default">
@@ -305,53 +305,53 @@
 						</div>
 						<div class="panel-body">
 							<ul>
-								<li class="clearfix">
-									<a href="" class="col-xs-4">
-										<div class="row">
+								<li class="row">
+									<div class="col-sm-5">
+										<a href="">
 											<img src="img/k01.jpg" alt="">
-										</div>
-									</a>
-									<a href="" class="col-xs-8">
-										<div class="row">
-											CSS 我们可以大大提升网页开发的工作效率！
-										</div>
-									</a>
+										</a>
+									</div>
+									<div class="col-sm-7">
+										<a href="">
+											CSS可以大大提升网页开发的工作效率！
+										</a>
+									</div>
 								</li>
-								<li class="clearfix">
-									<a href="" class="col-xs-4">
-										<div class="row">
+								<li class="row">
+									<div class="col-sm-5">
+										<a href="">
 											<img src="img/k02.jpg" alt="">
-										</div>
-									</a>
-									<a href="" class="col-xs-8">
-										<div class="row">
+										</a>
+									</div>
+									<div class="col-sm-7">
+										<a href="">
+											JavaScript是Web的编程语言
+										</a>
+									</div>
+								</li>
+								<li class="row">
+									<div class="col-sm-5">
+										<a href="">
+											<img src="img/k03.jpg" alt="">
+										</a>
+									</div>
+									<div class="col-sm-7">
+										<a href="">
 											JavaScript 是 Web 的编程语言
-										</div>
-									</a>
+										</a>
+									</div>
 								</li>
-								<li class="clearfix">
-									<a href="" class="col-xs-4">
-										<div class="row">
+								<li class="row">
+									<div class="col-sm-5">
+										<a href="">
 											<img src="img/k02.jpg" alt="">
-										</div>
-									</a>
-									<a href="" class="col-xs-8">
-										<div class="row">
-											JavaScript 是 Web 的编程语言
-										</div>
-									</a>
-								</li>
-								<li class="clearfix">
-									<a href="" class="col-xs-4">
-										<div class="row">
-											<img src="img/k02.jpg" alt="">
-										</div>
-									</a>
-									<a href="" class="col-xs-8">
-										<div class="row">
-											Bootstrap 是基于 HTML、CSS、JAVASCRIPT 的
-										</div>
-									</a>
+										</a>
+									</div>
+									<div class="col-sm-7">
+										<a href="">
+											Bootstrap是基于HTML、CSS、JAVASCRIPT的
+										</a>
+									</div>
 								</li>
 							</ul>
 						</div>
