--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/global.css" type="text/css">
+	<link rel="stylesheet" href="css/index.css">
 	<!--[if lt IE 9]>
 	<script src="./js/html5shiv.js"></script>
 	<script src="./js/respond.js"></script>
@@ -16,34 +17,36 @@
 <body>
 	<!--头部导航-->
 	<nav class="navbar navbar-inverse my-top-navbar navbar-fixed-top">
-		<div class="container">
-			<div class="row">
-				<div class="navbar-header ">
-					<a href="index.html" class="navbar-brand">王维军的博客</a>
-					<button class="navbar-toggle" data-toggle="collapse" data-target="#my-con">
-						<i class="icon-bar"></i>
-						<i class="icon-bar"></i>
-						<i class="icon-bar"></i>
-					</button>
-				</div>
-				<div id="my-con" class="navbar-collapse collapse">
-					<ul class="nav navbar-nav navbar-right">
-						<li class="my-active"><a href="">html+css</a></li>
-						<li><a href="">html5+css3</a></li>
-						<li><a href="">js实例</a></li>
-						<li><a href="">jQuery特效</a></li>
-						<li><a href="">angularJS</a></li>
-						<li><a href="">bootstrap</a></li>
-						<li><a href="">PHP+mysql</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</nav>
-	<!--内容1开始-->
 	<div class="container">
 		<div class="row">
-			<!--左边-->
+			<div class="navbar-header ">
+				<a href="index.html" class="navbar-brand">王维军的博客</a>
+				<button class="navbar-toggle" data-toggle="collapse" data-target="#my-con">
+					<i class="icon-bar"></i>
+					<i class="icon-bar"></i>
+					<i class="icon-bar"></i>
+				</button>
+			</div>
+			<div id="my-con" class="navbar-collapse collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li class="my-active"><a href="index.html">bootstrap</a></li>
+					<li><a href="page2.html">html5+css3</a></li>
+					<li><a href="page3.html">js实例</a></li>
+					<li><a href="page4.html">jQuery特效</a></li>
+					<li><a href="page5.html">angularJS</a></li>
+					<li><a href="page6.html">PHP+mysql</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</nav>
+
+
+	<!--内容开始-->
+	<div class="container">
+		<div class="row">
+		<!--内容1开始-->
+			<!--右边-->
 			<div class="col-sm-8 col-xs-12 my-main-left">
 				<div class="row">
 					<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -106,25 +109,24 @@
 						</a>
 					</div>
 				</div>
-
 			</div>
 
-			<!--右边-->
+			<!--左边-->
 			<div class="col-sm-3 col-sm-offset-1 hidden-xs my-main-right">
 				<div class="row">
-					<div class="panel panel-default">
+					<div class="panel panel-primary">
 						<div class="panel-heading">
 							<div class="panel-title">个人简介</div>
 						</div>
-						<div class="panel-body">
-							<ul class="my-panel-ul">
+						<div class="panel-body bg-info">
+							<ul class="my-panel-ul text-success">
 								<li>姓 名：王维军</li>
 								<li>性 别：男</li>
 								<li>电 话：15721252192</li>
 								<li>email：1745159983@qq.com</li>
 							</ul>
 						</div>
-						<div class="panel-footer my-panel-icon">
+						<div class="panel-footer my-panel-icon text-info">
 							<span class="col-xs-offset-1 fa fa-qq fa-2x"></span>
 							<span class="col-xs-offset-1 fa fa-comment fa-2x"></span>
 							<span class="col-xs-offset-1 fa fa-home fa-2x"></span>
@@ -133,151 +135,153 @@
 				</div>
 			</div>
 
-			<!--&lt;!&ndash;内容2开始&ndash;&gt;-->
-			<!--&lt;!&ndash;左边&ndash;&gt;-->
-	<div class="col-sm-8 my-con-left">
-		<div class="row clearfix">
-			<div class="col-xs-11">
-				<div class="row">
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<div class="panel-title">第一块面板</div>
-						</div>
-						<div class="panei-body my-con-panel1">
-							<div class="col-xs-3"></div>
-							<div class="col-xs-9">
-								通过 .panel-heading 可以很简单地为面板加入一个标题容器。
-								你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
-								不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
-							</div>
-						</div>
-						<div class="panel-footer clearfix">
-							<div class="pull-left">
-								<span class="fa fa-clock-o"></span>
-								2017-05-13
-							</div>
-							<div class="pull-right">
-								<span class="fa fa-thumbs-up"></span>
-								点赞
-								<span class="fa fa-thumbs-down"></span>
-								踩
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="pull-right my-circle-caret">
-				<div class="my-caret"></div>
-				<div class="my-circle hidden-xs"></div>
-			</div>
-		</div>
-		<div class="row clearfix">
-			<div class="col-xs-11">
-				<div class="row">
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<div class="panel-title">第一块面板</div>
-						</div>
-						<div class="panei-body my-con-panel1">
-							<div class="col-xs-3"></div>
-							<div class="col-xs-9">
-								通过 .panel-heading 可以很简单地为面板加入一个标题容器。
-								你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
-								不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
-							</div>
-						</div>
-						<div class="panel-footer clearfix">
-							<div class="pull-left">
-								<span class="fa fa-clock-o"></span>
-								2017-05-13
-							</div>
-							<div class="pull-right">
-								<span class="fa fa-thumbs-up"></span>
-								点赞
-								<span class="fa fa-thumbs-down"></span>
-								踩
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="pull-right my-circle-caret">
-				<div class="my-caret"></div>
-				<div class="my-circle hidden-xs"></div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-11">
+
+		<!--内容2开始-->
+			<!--左边-->
+			<div class="col-sm-8 my-con-left text-warning">
 				<div class="row clearfix">
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<div class="panel-title">第一块面板</div>
-						</div>
-						<div class="panei-body my-con-panel1">
-							<div class="col-xs-3"></div>
-							<div class="col-xs-9">
-								通过 .panel-heading 可以很简单地为面板加入一个标题容器。
-								你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
-								不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
-							</div>
-						</div>
-						<div class="panel-footer clearfix">
-							<div class="pull-left">
-								<span class="fa fa-clock-o"></span>
-								2017-05-13
-							</div>
-							<div class="pull-right">
-								<span class="fa fa-thumbs-up"></span>
-								点赞
-								<span class="fa fa-thumbs-down"></span>
-								踩
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="pull-right my-circle-caret">
-				<div class="my-caret"></div>
-				<div class="my-circle hidden-xs"></div>
-			</div>
-		</div>
-		<div class="row clearfix">
-			<div class="col-xs-11">
-				<div class="row">
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<div class="panel-title">第一块面板</div>
-						</div>
-						<div class="panei-body my-con-panel1">
-							<div class="col-xs-3"></div>
-							<div class="col-xs-9">
-								通过 .panel-heading 可以很简单地为面板加入一个标题容器。
-								你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
-								不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
-							</div>
-						</div>
-						<div class="panel-footer clearfix">
-							<div class="pull-left">
-								<span class="fa fa-clock-o"></span>
-								2017-05-13
-							</div>
-							<div class="pull-right">
-								<span class="fa fa-thumbs-up"></span>
-								点赞
-								<span class="fa fa-thumbs-down"></span>
-								踩
+					<div class="col-xs-11">
+						<div class="row">
+							<div class="panel">
+								<div class="panel-heading">
+									<div class="panel-title">第一块面板</div>
+								</div>
+								<div class="panei-body my-con-panel1 clearfix">
+									<div class="col-xs-2 my-con-panel1-img"><img src="img/k01.jpg" alt=""></div>
+									<div class="col-xs-10">
+										通过 .panel-heading 可以很简单地为面板加入一个标题容器。
+										你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
+										不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
+									</div>
+								</div>
+								<div class="panel-footer clearfix">
+									<div class="pull-left">
+										<span class="fa fa-clock-o"></span>
+										2017-05-13
+									</div>
+									<div class="pull-right">
+										<span class="fa fa-thumbs-up"></span>
+										点赞
+										<span class="fa fa-thumbs-down"></span>
+										踩
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
+					<div class="pull-right col-sm-1 my-circle-caret">
+						<div class="my-caret"></div>
+						<div class="my-circle hidden-xs"></div>
+					</div>
+				</div>
+				<div class="row clearfix">
+					<div class="col-xs-11">
+						<div class="row">
+							<div class="panel">
+								<div class="panel-heading">
+									<div class="panel-title">第一块面板</div>
+								</div>
+								<div class="panei-body my-con-panel1 clearfix">
+									<div class="col-xs-2 my-con-panel1-img"><img src="img/k01.jpg" alt=""></div>
+									<div class="col-xs-10">
+										通过 .panel-heading 可以很简单地为面板加入一个标题容器。
+										你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
+										不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
+									</div>
+								</div>
+								<div class="panel-footer clearfix">
+									<div class="pull-left">
+										<span class="fa fa-clock-o"></span>
+										2017-05-13
+									</div>
+									<div class="pull-right">
+										<span class="fa fa-thumbs-up"></span>
+										点赞
+										<span class="fa fa-thumbs-down"></span>
+										踩
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="pull-right col-sm-1 my-circle-caret">
+						<div class="my-caret"></div>
+						<div class="my-circle hidden-xs"></div>
+					</div>
+				</div>
+				<div class="row clearfix">
+					<div class="col-xs-11">
+						<div class="row">
+							<div class="panel">
+								<div class="panel-heading">
+									<div class="panel-title">第一块面板</div>
+								</div>
+								<div class="panei-body my-con-panel1 clearfix">
+									<div class="col-xs-2 my-con-panel1-img"><img src="img/k01.jpg" alt=""></div>
+									<div class="col-xs-10">
+										通过 .panel-heading 可以很简单地为面板加入一个标题容器。
+										你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
+										不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
+									</div>
+								</div>
+								<div class="panel-footer clearfix">
+									<div class="pull-left">
+										<span class="fa fa-clock-o"></span>
+										2017-05-13
+									</div>
+									<div class="pull-right">
+										<span class="fa fa-thumbs-up"></span>
+										点赞
+										<span class="fa fa-thumbs-down"></span>
+										踩
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="pull-right col-sm-1 my-circle-caret">
+						<div class="my-caret"></div>
+						<div class="my-circle hidden-xs"></div>
+					</div>
+				</div>
+				<div class="row clearfix">
+					<div class="col-xs-11">
+						<div class="row">
+							<div class="panel">
+								<div class="panel-heading">
+									<div class="panel-title">第一块面板</div>
+								</div>
+								<div class="panei-body my-con-panel1 clearfix">
+									<div class="col-xs-2 my-con-panel1-img"><img src="img/k01.jpg" alt=""></div>
+									<div class="col-xs-10">
+										通过 .panel-heading 可以很简单地为面板加入一个标题容器。
+										你也可以通过添加设置了 .panel-title 类的 标签，添加一个预定义样式的标题。
+										不过， 标签的字体大小将被 .panel-heading 的样式所覆盖
+									</div>
+								</div>
+								<div class="panel-footer clearfix">
+									<div class="pull-left">
+										<span class="fa fa-clock-o"></span>
+										2017-05-13
+									</div>
+									<div class="pull-right">
+										<span class="fa fa-thumbs-up"></span>
+										点赞
+										<span class="fa fa-thumbs-down"></span>
+										踩
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="pull-right col-sm-1 my-circle-caret">
+						<div class="my-caret"></div>
+						<div class="my-circle hidden-xs"></div>
+					</div>
 				</div>
 			</div>
-			<div class="pull-right my-circle-caret">
-				<div class="my-caret"></div>
-				<div class="my-circle hidden-xs"></div>
-			</div>
-		</div>
-	</div>
-			<!--&lt;!&ndash;右边&ndash;&gt;-->
+
+			<!--右边-->
 			<div class="my-con-right col-sm-3 col-sm-offset-1 hidden-xs">
 				<div class="row">
 					<div class="panel panel-default">
@@ -358,24 +362,31 @@
 					</div>
 				</div>
 			</div>
+		</div>
+	</div>
+
+
+	<!--尾部分页-->
+	<div class="container">
+		<div class="row">
 			<!--分页-->
 			<ul class="pagination pull-right">
-				<li><a href="">首页</a></li>
-				<li><a href=""><<</a></li>
-				<li class="active"><a href="">1</a></li>
-				<li><a href="">2</a></li>
-				<li><a href="">3</a></li>
-				<li><a href="">4</a></li>
-				<li><a href="">5</a></li>
-				<li><a href="">6</a></li>
-				<li><a href="">7</a></li>
-				<li><a href="">>></a></li>
-				<li><a href="">尾页</a></li>
+				<li><a href="index.html">首页</a></li>
+				<li><a href="#"><<</a></li>
+				<li class="active"><a href="index.html">1</a></li>
+				<li><a href="page2.html">2</a></li>
+				<li><a href="page3.html">3</a></li>
+				<li><a href="page4.html">4</a></li>
+				<li><a href="page5.html">5</a></li>
+				<li><a href="page6.html">6</a></li>
+				<li><a href="page7.html">7</a></li>
+				<li><a href="page8.html">>></a></li>
+				<li><a href="page8.html">尾页</a></li>
 			</ul>
 		</div>
 	</div>
 </body>
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/demo.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
 </html>
