--- a/template.html
+++ b/template.html
@@ -13,8 +13,51 @@
     <![endif]-->
 </head>
 <body>
+<!--头部导航-->
+<nav class="navbar navbar-inverse my-top-navbar navbar-fixed-top">
+    <div class="container">
+        <div class="row">
+            <div class="navbar-header ">
+                <a href="index.html" class="navbar-brand">王维军的博客</a>
+                <button class="navbar-toggle" data-toggle="collapse" data-target="#my-con">
+                    <i class="icon-bar"></i>
+                    <i class="icon-bar"></i>
+                    <i class="icon-bar"></i>
+                </button>
+            </div>
+            <div id="my-con" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="my-active"><a href="index.html">bootstrap</a></li>
+                    <li><a href="page2.html">html5+css3</a></li>
+                    <li><a href="page3.html">js实例</a></li>
+                    <li><a href="page4.html">jQuery特效</a></li>
+                    <li><a href="page5.html">angularJS</a></li>
+                    <li><a href="page6.html">PHP+mysql</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</nav>
+<!--尾部分页-->
+<div class="container">
+    <div class="row">
+        <!--分页-->
+        <ul class="pagination pull-right">
+            <li><a href="index.html">首页</a></li>
+            <li><a href="#"><<</a></li>
+            <li class="active"><a href="index.html">1</a></li>
+            <li><a href="page2.html">2</a></li>
+            <li><a href="page3.html">3</a></li>
+            <li><a href="page4.html">4</a></li>
+            <li><a href="page5.html">5</a></li>
+            <li><a href="page6.html">6</a></li>
+            <li><a href="page7.html">7</a></li>
+            <li><a href="page8.html">>></a></li>
+            <li><a href="page8.html">尾页</a></li>
+        </ul>
+    </div>
+</div>
 </body>
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/demo.js"></script>
 </html>
