--- a/page2.html
+++ b/page2.html
@@ -13,7 +13,7 @@
     <script src="./js/respond.js"></script>
     <![endif]-->
 </head>
-<body>
+<body style="overflow: hidden;">
 <!--头部导航-->
 <nav class="navbar navbar-inverse my-top-navbar navbar-fixed-top">
     <div class="container">
