--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
 
 	<!--尾部分页-->
-	<div class="container">
+	<div class="container hidden-xs">
 		<div class="row">
 			<!--分页-->
 			<ul class="pagination pull-right">
