--- a/page2.html
+++ b/page2.html
@@ -77,7 +77,7 @@
 <canvas style="display: none; margin-left: 5%;" class="center-block"></canvas>
 <iframe style="width: 100%;height: 600px;" src="" frameborder="0"></iframe>
 <!--尾部分页-->
-<div class="container navbar-fixed-bottom">
+<div class="container navbar-fixed-bottom hidden-xs">
     <div class="row">
         <!--分页-->
         <ul class="pagination pull-right">
