--- a/template.html
+++ b/template.html
@@ -42,7 +42,7 @@
 <div class="container">
     <div class="row">
         <!--分页-->
-        <ul class="pagination pull-right">
+        <ul class="pagination pull-right hidden-xs">
             <li><a href="index.html">首页</a></li>
             <li><a href="#"><<</a></li>
             <li class="active"><a href="index.html">1</a></li>
