--- a/page2.html
+++ b/page2.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="row">
             <div class="navbar-header ">
-                <a href="index.html" class="navbar-brand">王维军的博客</a>
+                <a href="index.html" class="navbar-brand">王维军的个人网站</a>
                 <button class="navbar-toggle" data-toggle="collapse" data-target="#my-con">
                     <i class="icon-bar"></i>
                     <i class="icon-bar"></i>
@@ -89,9 +89,8 @@
             <li><a href="page4.html">4</a></li>
             <li><a href="page5.html">5</a></li>
             <li><a href="page6.html">6</a></li>
-            <li><a href="page7.html">7</a></li>
-            <li><a href="page8.html">>></a></li>
-            <li><a href="page8.html">尾页</a></li>
+            <li><a href="page3.html">>></a></li>
+            <li><a href="page6.html">尾页</a></li>
         </ul>
     </div>
 </div>
