--- a/page5.html
+++ b/page5.html
@@ -8,14 +8,13 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/global.css" type="text/css">
     <link rel="stylesheet" href="css/page5.css">
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/js.js"></script>
     <!--[if lt IE 9]>
     <script src="./js/html5shiv.js"></script>
     <script src="./js/respond.js"></script>
     <![endif]-->
+    <script type="text/javascript" src="js/angular.min.js"></script>
 </head>
-<body style="background:#fff;">
+<body>
 <!--头部导航-->
 <nav class="navbar navbar-inverse my-top-navbar navbar-fixed-top">
     <div class="container">
@@ -46,264 +45,173 @@
     <div class="row">
         <div class="col-md-2">
             <div class="list-group">
-                <a href="page5.html" class="list-group-item active">用户管理</a>
-                <a href="page55.html" class="list-group-item">用户搜索</a>
-                <a href="" role="button"  class="list-group-item" data-toggle="modal" data-target="#myModal">添加用户</a>
+                <a href="page5.html" class="list-group-item active">内容管理</a>
+                <a href="page55.html" class="list-group-item">添加内容</a>
             </div>
         </div>
         <div class="col-md-10">
             <div class="page-header">
-                <h2>用户管理</h2>
+                <h1>内容管理</h1>
             </div>
             <ul class="nav nav-tabs">
                 <li class="active">
-                    <a href="page5.html">用户列表</a>
+                    <a href="page5.html">内容管理</a>
                 </li>
                 <li>
-                    <a href="page55.html">用户搜索</a>
-                </li>
-                <li>
-                    <a href="" role="button" data-toggle="modal" data-target="#myModal">添加用户</a>
+                    <a href="page55.html">添加内容</a>
                 </li>
             </ul>
             <table class="table">
                 <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>用户名</th>
-                    <th>邮箱</th>
+                    <th>文章标题</th>
+                    <th>作者</th>
+                    <th>发布时间</th>
                     <th>操作</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
-                    <th scope="row">1</th>
-                    <td>张三</td>
-                    <td>123456789@maiziedu.com</td>
+                    <th scope="row" class="my-tr">angularJS常用内置指令</th>
+                    <td>王维军</td>
+                    <td>2017/05/08</td>
                     <td>
                         <div role="presentation" class="dropdown">
                             <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                                 操作<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a href="#">编辑</a></li>
-                                <li><a href="#">删除</a></li>
-                                <li><a href="#">锁定</a></li>
-                                <li><a href="#">修改密码</a></li>
+                                <li class="my-remove"><a href="#">删除</a></li>
                             </ul>
                         </div>
                     </td>
                 </tr>
+                <tr class="my-show">
+                    <td colspan="4" style="height: 50px;">
+                        ng-app;  ng-bind;  ng-model;  ng-repeat;  ng-valid;  ng-dirty;
+                        ng-controller;ng-init;ng-if;ng-disabled; ng-hide;ng-show;ng-click;
+                    </td>
+                </tr>
                 <tr>
-                    <th scope="row">2</th>
-                    <td>李四</td>
-                    <td>121265489@maiziedu.com</td>
+                    <th scope="row" class="my-tr">angularJS过滤</th>
+                    <td>王维军</td>
+                    <td>2017/05/08</td>
                     <td>
                         <div role="presentation" class="dropdown">
                             <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                                 操作<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a href="#">编辑</a></li>
-                                <li><a href="#">删除</a></li>
-                                <li><a href="#">锁定</a></li>
-                                <li><a href="#">修改密码</a></li>
+                                <li class="my-remove"><a href="#">删除</a></li>
                             </ul>
                         </div>
                     </td>
                 </tr>
+                <tr class="my-show">
+                    <td colspan="4" style="height: 50px;">
+                        uppercase:大写，lowercase:小写 	oderBy：排序； filter:字符匹配，查找子集；
+                        currency:货币；date:格式化日期； number：浮点型； limitTo:选取；
+                        自定义过滤器：filter（“name”,function(){return function(name,char,..)}）
+                    </td>
+                </tr>
                 <tr>
-                    <th scope="row">2</th>
-                    <td>李四</td>
-                    <td>121265489@maiziedu.com</td>
+                    <th scope="row" class="my-tr">angularJS自定义指令</th>
+                    <td>王维军</td>
+                    <td>2017/05/08</td>
                     <td>
                         <div role="presentation" class="dropdown">
                             <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                                 操作<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a href="#">编辑</a></li>
-                                <li><a href="#">删除</a></li>
-                                <li><a href="#">锁定</a></li>
-                                <li><a href="#">修改密码</a></li>
+                                <li class="my-remove"><a href="#">删除</a></li>
                             </ul>
                         </div>
                     </td>
                 </tr>
+                <tr class="my-show">
+                    <td colspan="4" style="height: 50px;">
+                        app.directive("name",function(){return{}});<br/>
+                        restrict(包括：EACM);templace(输出，可以使字符串也可以是函数function(elem,attr){});<br/>
+                        replace(是否替换，默认为false在元素中插入节点,为true时，将元素替换)；<br/>
+                        templaceUrl(和templace类似，但是是连接一个地址作为输出的内容);<br/>
+                        transclude(是否保留原来内部所有的节点，与ng-transclude配合使用，可以是布尔值或者对象，对象里面的
+                        值为已经自定义过的自定义的元素或者属性或者类或者注释)<br/>
+                        priority(值为数字，越大优先级越高 ，默认为0)；<br/>
+                        terminal(终结，当设置为true时，优先级比当前低的指令会失效，同级的依然有效.)<br/>
+                        link(值是一个函数形式，负责执行DOM 操作和注册事件监听器,包含的参数function(scope,elem,attr){});<br/>
+                        scope(默认为false，是继承父级作用域，true是开辟自己的作用域并继承父级的作用域，对象是
+                        开辟自己独立的作用域，可通过“@”“=”“&”来获取到父级的值绑定到自己的作用域中)<br/>
+                        controller(自定义一个控制器，并在link里面输出,名字可由controllerAs确定)<br/>
+                        controllerAs(确定controller的名字)
+                    </td>
+                </tr>
                 <tr>
-                    <th scope="row">2</th>
-                    <td>李四</td>
-                    <td>121265489@maiziedu.com</td>
+                    <th scope="row" class="my-tr">angularJS常用服务service</th>
+                    <td>王维军</td>
+                    <td>2017/05/08</td>
                     <td>
                         <div role="presentation" class="dropdown">
                             <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                                 操作<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a href="#">编辑</a></li>
-                                <li><a href="#">删除</a></li>
-                                <li><a href="#">锁定</a></li>
-                                <li><a href="#">修改密码</a></li>
+                                <li class="my-remove"><a href="#">删除</a></li>
                             </ul>
                         </div>
                     </td>
                 </tr>
+                <tr class="my-show">
+                    <td colspan="4" style="height: 50px;">
+                        $location;$timeout; $interval; $http({method:"GET",url:".."}).then(funsuccss(),fn())<br/>
+                        ng-options和ng-repeat：ng-options选择的值ng-model为对象；<br/>
+                        ng-repeat选择的值ng-model为字符串；<br/>
+                    </td>
+                </tr>
                 <tr>
-                    <th scope="row">2</th>
-                    <td>李四</td>
-                    <td>121265489@maiziedu.com</td>
+                    <th scope="row" class="my-tr">angularJS常用内置指令</th>
+                    <td>王维军</td>
+                    <td>2017/05/08</td>
                     <td>
                         <div role="presentation" class="dropdown">
                             <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                                 操作<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a href="#">编辑</a></li>
-                                <li><a href="#">删除</a></li>
-                                <li><a href="#">锁定</a></li>
-                                <li><a href="#">修改密码</a></li>
+                                <li class="my-remove"><a href="#">删除</a></li>
                             </ul>
                         </div>
                     </td>
                 </tr>
+                <tr class="my-show">
+                    <td colspan="4" style="height: 50px;">
+                        ng-app;  ng-bind;  ng-model;  ng-repeat;  ng-valid;  ng-dirty;
+                        ng-controller;ng-init;ng-if;ng-disabled; ng-hide;ng-show;ng-click;
+                    </td>
+                </tr>
                 <tr>
-                    <th scope="row">2</th>
-                    <td>李四</td>
-                    <td>121265489@maiziedu.com</td>
+                    <th scope="row" class="my-tr">angularJS常用内置指令</th>
+                    <td>王维军</td>
+                    <td>2017/05/08</td>
                     <td>
                         <div role="presentation" class="dropdown">
                             <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                                 操作<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a href="#">编辑</a></li>
-                                <li><a href="#">删除</a></li>
-                                <li><a href="#">锁定</a></li>
-                                <li><a href="#">修改密码</a></li>
+                                <li class="my-remove"><a href="#">删除</a></li>
                             </ul>
                         </div>
                     </td>
                 </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>李四</td>
-                    <td>121265489@maiziedu.com</td>
-                    <td>
-                        <div role="presentation" class="dropdown">
-                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                                操作<span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">编辑</a></li>
-                                <li><a href="#">删除</a></li>
-                                <li><a href="#">锁定</a></li>
-                                <li><a href="#">修改密码</a></li>
-                            </ul>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>李四</td>
-                    <td>121265489@maiziedu.com</td>
-                    <td>
-                        <div role="presentation" class="dropdown">
-                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                                操作<span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">编辑</a></li>
-                                <li><a href="#">删除</a></li>
-                                <li><a href="#">锁定</a></li>
-                                <li><a href="#">修改密码</a></li>
-                            </ul>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>李四</td>
-                    <td>121265489@maiziedu.com</td>
-                    <td>
-                        <div role="presentation" class="dropdown">
-                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                                操作<span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">编辑</a></li>
-                                <li><a href="#">删除</a></li>
-                                <li><a href="#">锁定</a></li>
-                                <li><a href="#">修改密码</a></li>
-                            </ul>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>李四</td>
-                    <td>121265489@maiziedu.com</td>
-                    <td>
-                        <div role="presentation" class="dropdown">
-                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                                操作<span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">编辑</a></li>
-                                <li><a href="#">删除</a></li>
-                                <li><a href="#">锁定</a></li>
-                                <li><a href="#">修改密码</a></li>
-                            </ul>
-                        </div>
+                <tr class="my-show">
+                    <td colspan="4" style="height: 50px;">
+                        ng-app;  ng-bind;  ng-model;  ng-repeat;  ng-valid;  ng-dirty;
+                        ng-controller;ng-init;ng-if;ng-disabled; ng-hide;ng-show;ng-click;
                     </td>
                 </tr>
                 </tbody>
             </table>
-        </div>
-    </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">添加用户</h4>
-            </div>
-            <div class="modal-body">
-                <form action="#">
-                    <div class="form-group">
-                        <label for="addname">用户名</label>
-                        <input type="text" id="addname" class="form-control" placeholder="用户名">
-                    </div>
-                    <div class="form-group">
-                        <label for="addpassword">用户密码</label>
-                        <input type="text" id="addpassword" class="form-control" placeholder="请输入用户密码">
-                    </div>
-                    <div class="form-group">
-                        <label for="addpassword1">确认用户密码</label>
-                        <input type="text" id="addpassword1" class="form-control" placeholder="请确认输入用户密码">
-                    </div>
-                    <div class="form-group">
-                        <label for="addemail">请输入用户邮箱</label>
-                        <input type="email" id="addemail" class="form-control" placeholder="请输入用户邮箱">
-                    </div>
-                    <div class="form-group">
-                        <label for="addyonghuzu">所属用户组</label>
-                        <select id="addyonghuzu" class="form-control">
-                            <option>限制会员</option>
-                            <option>新手上路</option>
-                            <option>组册会员</option>
-                            <option>中级会员</option>
-                            <option>高级会员</option>
-                        </select>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                <button type="button" class="btn btn-primary">提交</button>
-            </div>
         </div>
     </div>
 </div>
